# python-odesli

./: DEV.md  LICENSE  Odesli.py  README.md  Song.py  setup.cfg
odesli/: Odesli.py  Song.py  SongResult.py
odesli/entity/: Entity.py  EntityResult.py
odesli/entity/album/: Album.py  AlbumResult.py
odesli/entity/song/: Song.py  SongResult.py
odesli/song/: Song.py
tests/: test_TestAlbum.py  test_TestSong.py
