[metadata]
name = odesli
version = 0.0.2
author = Fabian Thomas
author_email = fabian@fabianthomas.de
description = Odesli/Songlink API wrapper for python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fabian-thomas/python-odesli
project_urls =
    Bug Tracker = https://github.com/fabian-thomas/python-odesli/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    requests
